; ModuleID = '/home/carl/AnghaBench/linux/security/apparmor/extr_lsm.c_apparmor_socket_post_create.c'
source_filename = "/home/carl/AnghaBench/linux/security/apparmor/extr_lsm.c_apparmor_socket_post_create.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.socket = type { i64 }
%struct.aa_label = type { i32 }
%struct.aa_ns = type { i32 }
%struct.aa_sk_ctx = type { %struct.aa_label* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.socket*, i32, i32, i32, i32)* @apparmor_socket_post_create to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @apparmor_socket_post_create(%struct.socket* %0, i32 %1, i32 %2, i32 %3, i32 %4) #0 {
  %6 = alloca %struct.socket*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca %struct.aa_label*, align 8
  %12 = alloca %struct.aa_ns*, align 8
  %13 = alloca %struct.aa_sk_ctx*, align 8
  store %struct.socket* %0, %struct.socket** %6, align 8
  store i32 %1, i32* %7, align 4
  store i32 %2, i32* %8, align 4
  store i32 %3, i32* %9, align 4
  store i32 %4, i32* %10, align 4
  %14 = load i32, i32* %10, align 4
  %15 = icmp ne i32 %14, 0
  br i1 %15, label %16, label %24

16:                                               ; preds = %5
  %17 = call %struct.aa_ns* (...) @aa_get_current_ns()
  store %struct.aa_ns* %17, %struct.aa_ns** %12, align 8
  %18 = load %struct.aa_ns*, %struct.aa_ns** %12, align 8
  %19 = call %struct.aa_label* @ns_unconfined(%struct.aa_ns* %18)
  %20 = call i8* @aa_get_label(%struct.aa_label* %19)
  %21 = bitcast i8* %20 to %struct.aa_label*
  store %struct.aa_label* %21, %struct.aa_label** %11, align 8
  %22 = load %struct.aa_ns*, %struct.aa_ns** %12, align 8
  %23 = call i32 @aa_put_ns(%struct.aa_ns* %22)
  br label %26

24:                                               ; preds = %5
  %25 = call %struct.aa_label* (...) @aa_get_current_label()
  store %struct.aa_label* %25, %struct.aa_label** %11, align 8
  br label %26

26:                                               ; preds = %24, %16
  %27 = load %struct.socket*, %struct.socket** %6, align 8
  %28 = getelementptr inbounds %struct.socket, %struct.socket* %27, i32 0, i32 0
  %29 = load i64, i64* %28, align 8
  %30 = icmp ne i64 %29, 0
  br i1 %30, label %31, label %45

31:                                               ; preds = %26
  %32 = load %struct.socket*, %struct.socket** %6, align 8
  %33 = getelementptr inbounds %struct.socket, %struct.socket* %32, i32 0, i32 0
  %34 = load i64, i64* %33, align 8
  %35 = call %struct.aa_sk_ctx* @SK_CTX(i64 %34)
  store %struct.aa_sk_ctx* %35, %struct.aa_sk_ctx** %13, align 8
  %36 = load %struct.aa_sk_ctx*, %struct.aa_sk_ctx** %13, align 8
  %37 = getelementptr inbounds %struct.aa_sk_ctx, %struct.aa_sk_ctx* %36, i32 0, i32 0
  %38 = load %struct.aa_label*, %struct.aa_label** %37, align 8
  %39 = call i32 @aa_put_label(%struct.aa_label* %38)
  %40 = load %struct.aa_label*, %struct.aa_label** %11, align 8
  %41 = call i8* @aa_get_label(%struct.aa_label* %40)
  %42 = bitcast i8* %41 to %struct.aa_label*
  %43 = load %struct.aa_sk_ctx*, %struct.aa_sk_ctx** %13, align 8
  %44 = getelementptr inbounds %struct.aa_sk_ctx, %struct.aa_sk_ctx* %43, i32 0, i32 0
  store %struct.aa_label* %42, %struct.aa_label** %44, align 8
  br label %45

45:                                               ; preds = %31, %26
  %46 = load %struct.aa_label*, %struct.aa_label** %11, align 8
  %47 = call i32 @aa_put_label(%struct.aa_label* %46)
  ret i32 0
}

declare dso_local %struct.aa_ns* @aa_get_current_ns(...) #1

declare dso_local i8* @aa_get_label(%struct.aa_label*) #1

declare dso_local %struct.aa_label* @ns_unconfined(%struct.aa_ns*) #1

declare dso_local i32 @aa_put_ns(%struct.aa_ns*) #1

declare dso_local %struct.aa_label* @aa_get_current_label(...) #1

declare dso_local %struct.aa_sk_ctx* @SK_CTX(i64) #1

declare dso_local i32 @aa_put_label(%struct.aa_label*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
